[package]
name = "gio_apic"
version = "0.1.0"
edition = "2024"

[dependencies]
malloc = { path = "../../../../domain-lib/malloc" }
corelib = { path = "../../../../domain-lib/corelib" }
basic = { path = "../../../../domain-lib/basic" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
interface = { path = "../../../../domain-lib/interface", features = ["domain"] }
storage = { path = "../../../../domain-lib/storage", features = ["impl"] }
io_apic = { path = "../io_apic" }

[features]
default = ["rust-unwind"]
rust-unwind = []
