[package]
name = "net_stack"
version = "0.1.0"
edition = "2024"


[dependencies]
interface = { path = "../../../../domain-lib/interface" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
basic = { path = "../../../../domain-lib/basic" }


spin = "0"
lose-net-stack = { path = "../../../../utils/lose-net-stack", features = ["log"]}
log = "0"
downcast-rs = { version = "1.2.0", default-features = false }