[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../../../domain-lib/basic", features = ["task"] }
interface = { path = "../../../../domain-lib/interface" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
task_meta = { path = "../../../../domain-lib/task_meta" }

small-index = { path = "../../../../utils/small-index" }
vfscore = { path = "../../../../rvfs-ref/vfscore-ref", package = "vfscore-ref", features = ["linux_error"] }
page_table = { path = "../../../../base/mem/crates/page-table", package = "page-table" }
memory_addr = { path ="../../../../base/mem/crates/memory_addr" }

pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
ptable = { path = "../../../../base/mem/crates/vmspace", package = "vmspace" }


spin = "0"
log = "0"
# now we trust the elf loader
xmas-elf = "0.10"  # unsafe lib

[features]
default = []
test = []
