[package]
name = "cmos_rtc"
version = "0.1.0"
edition = "2024"

[dependencies]
interface = { path = "../../../../domain-lib/interface" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
basic = { path = "../../../../domain-lib/basic" }

x86_rtc = "0.1.1"
timestamp = { git = "https://github.com/Byte-OS/timestamp" }
