[package]
name = "goldfish"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../../domain-lib/interface" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
basic = { path = "../../../../domain-lib/basic" }

rtc  = { path = "../../../../utils/rtc" }
timestamp = { git = "https://github.com/Byte-OS/timestamp" }