[package]
name = "guart16550"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corelib = { path = "../../../../domain-lib/corelib" }
basic = { path = "../../../../domain-lib/basic" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
interface = { path = "../../../../domain-lib/interface",  features = ["domain"]  }
malloc = { path = "../../../../domain-lib/malloc" }
storage = { path = "../../../../domain-lib/storage", features = ["impl"] }

[features]
default = ["rust-unwind"]
rust-unwind = []

[target.'cfg(target_arch = "riscv64")'.dependencies]
uart16550 = { path = "../uart16550" }
