[package]
name = "virtio_blk"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../../domain-lib/interface" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }
basic = { path = "../../../../domain-lib/basic" }

virtio_mmio_common = { path = "../../../common_lib/virtio_mmio_common" }
virtio-drivers = { path = "../../../../utils/safe-virtio-drivers/virtio-drivers" }
log = "0"

[features]
default = []
crash = []