[package]
name = "virtio_mmio_net"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../../../domain-lib/interface" }
basic = { path = "../../../../domain-lib/basic" }
shared_heap = { path = "../../../../domain-lib/shared_heap" }

virtio-drivers = { path = "../../../../utils/safe-virtio-drivers/virtio-drivers" } # safe crate
virtio_mmio_common = { path = "../../../common_lib/virtio_mmio_common" }
log = "0"